Add vertical rhythm variable and edit colours

--- a/sass/global/_colours.scss
+++ b/sass/global/_colours.scss
@@ -11,6 +11,7 @@ $colour-jelly-bean: #237b98;
 $colour-blumine: #1c627a;
 $colour-valencia: #da3743;
 $colour-cardinal: #b8222d;
+$colour-apple: #4BB543;
 
 $primary-text-colour: $colour-mine-shaft;
 $primary-btn-bg-colour: $colour-jelly-bean;
